--- a/srvpp/libsrvpp.pc.in
+++ b/srvpp/libsrvpp.pc.in
@@ -2,7 +2,7 @@ prefix=@CMAKE_INSTALL_PREFIX@
 includedir=${prefix}/@CMAKE_INSTALL_INCLUDEDIR@
 libdir=${prefix}/@CMAKE_INSTALL_LIBDIR@
 
-Name: SRVPP
+Name: srvpp
 Description: VPP-Sysrepo integration library
 Version: 0.0.1
 Libs: -L${libdir} -lsrvpp
