1. remove vlibapi since it was removed in vpp-18.07; 2. change vpp-api to vpp/api since it was changed in vpp-18.07

--- a/srvpp/src/CMakeLists.txt
+++ b/srvpp/src/CMakeLists.txt
@@ -27,7 +27,7 @@ set(SRVPP_HEADERS
 )
 
 # libraries to link with
-set(LINK_LIBRARIES vlibmemoryclient vlibapi svm vppinfra pthread rt dl)
+set(LINK_LIBRARIES vlibmemoryclient svm vppinfra pthread rt dl)
 
 # build instructions
 add_library(srvpp SHARED ${SRVPP_SOURCES})
